After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769027 - Docs misleadingly imply G_CHECKSUM_SHA512 is available since 2.16
Docs misleadingly imply G_CHECKSUM_SHA512 is available since 2.16
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-07-21 09:30 UTC by Daniel P. Berrange
Modified: 2016-07-21 12:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Expand docs to annotatre version for G_CHECKSUM_SHA512 (1.05 KB, patch)
2016-07-21 09:30 UTC, Daniel P. Berrange
committed Details | Review

Description Daniel P. Berrange 2016-07-21 09:30:56 UTC
Created attachment 331862 [details] [review]
Expand docs to annotatre version for G_CHECKSUM_SHA512

The docs for GChecksumType do not mention that G_CHECKSUM_SHA512 was only added in 2.36, much later than the 2.16 implied by the current docs.
Comment 1 Emmanuele Bassi (:ebassi) 2016-07-21 09:40:25 UTC
Review of attachment 331862 [details] [review]:

LGTM.